@@ -4,21 +4,25 @@ import com.example.demo.client.SimulatedCotizacionClient;
 import com.example.demo.client.SimulatedSolicitudesClient;
 import com.example.demo.controller.SolicitudController.SolicitudTop3Resultado;
 import com.example.demo.dto.InvitacionCotizacionDTO;
-import com.example.demo.entity.Calificacion;
+import com.example.demo.dto.SolicitudesCreadasDTO;
 import com.example.demo.entity.Prestador;
 import com.example.demo.entity.Solicitud;
 import com.example.demo.entity.enums.EstadoSolicitud;
 import com.example.demo.repository.PrestadorRepository;
+import com.example.demo.repository.RubroRepository;
 import com.example.demo.repository.SolicitudRepository;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Optional;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Comparator;
+import java.time.LocalTime;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -28,72 +32,108 @@ public class SolicitudService {
 
     private static final Logger log = LoggerFactory.getLogger(SolicitudService.class);
 
-    private final NotificacionesService notificacionesService;
-    private final PrestadorRepository prestadorRepository;
-    private final SolicitudRepository solicitudRepository;
-    private final SimulatedCotizacionClient cotizacionClient;
-    private final SimulatedSolicitudesClient solicitudesClient;
+    @Autowired private NotificacionesService notificacionesService;
+    @Autowired private PrestadorRepository prestadorRepository;
+    @Autowired private SolicitudRepository solicitudRepository;
+    @Autowired private SimulatedCotizacionClient cotizacionClient;
+    @Autowired private SimulatedSolicitudesClient solicitudesClient;
+    @Autowired private RubroRepository rubroService;
 
-    public SolicitudService(PrestadorRepository prestadorRepository,
-                            SolicitudRepository solicitudRepository,
-                            SimulatedCotizacionClient cotizacionClient,
-                            SimulatedSolicitudesClient solicitudesClient,
-                            NotificacionesService notificacionesService) {
-        this.prestadorRepository = prestadorRepository;
-        this.solicitudRepository = solicitudRepository;
-        this.cotizacionClient = cotizacionClient;
-        this.solicitudesClient = solicitudesClient;
-        this.notificacionesService = notificacionesService;
+    @Transactional
+    public SolicitudTop3Resultado recotizar(Long solicitudId) {
+        Solicitud solicitud = solicitudRepository.findById(solicitudId)
+            .orElseThrow(() -> new IllegalArgumentException("Solicitud no encontrada: " + solicitudId));
+
+        if (solicitud.getEstado() != EstadoSolicitud.CANCELADA) {
+            // podés relajar esto si querés recotizar igual
+            throw new IllegalStateException("La solicitud no está CANCELADA");
+        }
+
+        Long rubroId = Objects.requireNonNull(solicitud.getRubroId(), "rubroId requerido");
+
+        // Base: excluí todos los que YA COTIZARON esta solicitud
+        List<Prestador> candidatos = prestadorRepository.findTopByRubroExcluyendoLosQueCotizaron(
+            rubroId, solicitud.getId(), PageRequest.of(0, 10) // traigo 10 por si alguno lo filtro luego
+        );
+
+        // Extra: si hubo asignado directo y querés excluirlo aunque no haya cotizado
+        Long asignado = obtenerPrestadorAsignadoId(solicitud);
+        if (asignado != null) {
+            candidatos = candidatos.stream().filter(p -> !p.getId().equals(asignado)).toList();
+        }
+        candidatos = candidatos.stream()
+            .filter(p -> estaLibre(p, solicitud))
+            .toList();
+
+        List<Prestador> top3 = candidatos.stream().limit(3).toList();
+        if (top3.isEmpty()) {
+            var out = new SolicitudTop3Resultado();
+            out.setSolicitudId(solicitud.getId());
+            out.setDescripcion(solicitud.getDescripcion());
+            out.setEstado(solicitud.getEstado().name()); // sigue CANCELADA
+            out.setTop3(List.of());
+            return out;
+        }
+
+        // Volver a COTIZANDO y enviar
+        solicitud.setEstado(EstadoSolicitud.COTIZANDO);
+        solicitudRepository.save(solicitud);
+
+        var invitaciones = top3.stream()
+            .map(p -> buildInvitacionDTO(solicitud, rubroId, p, "Recotización: invitación a cotizar"))
+            .peek(dto -> {
+                dto.setEnviado(cotizacionClient.enviarInvitacion(dto));
+                Long ref = dto.getCotizacionId() != null ? dto.getCotizacionId() : dto.getSolicitudId();
+                notificacionesService.notificarInvitacionCotizacion(
+                    ref,
+                    "Recotización: invitación enviada",
+                    "Se envió invitación al prestador " + dto.getPrestadorId() + " para la solicitud " + dto.getSolicitudId()
+                );
+            })
+            .collect(Collectors.toList());
+
+        var out = new SolicitudTop3Resultado();
+        out.setSolicitudId(solicitud.getId());
+        out.setDescripcion(solicitud.getDescripcion());
+        out.setEstado(solicitud.getEstado().name()); // COTIZANDO
+        out.setTop3(invitaciones);
+        return out;
     }
 
-    /**
-     * Toma TODAS las solicitudes CREADAS.
-     * - Si tienen un prestador asignado, se marcan como ASIGNADA y se notifica solo a ese.
-     * - Si no, se pasan a COTIZANDO y se envía invitación al Top-3.
-     * Si no hay candidatos, la solicitud se mantiene en CREADA.
-     */
+
     @Transactional
     public List<SolicitudTop3Resultado> procesarTodasLasCreadas() {
         List<Solicitud> creadas = solicitudesClient.obtenerSolicitudesCreadas();
         log.info("Procesando {} solicitudes en estado CREADA", creadas.size());
-
-        return creadas.stream()
-                .map(this::procesarUnaSolicitud)
-                .collect(Collectors.toList());
+        return creadas.stream().map(this::procesarUnaSolicitud).collect(Collectors.toList());
     }
 
-    // =======================
-    // Helpers privados
-    // =======================
-
     private SolicitudTop3Resultado procesarUnaSolicitud(Solicitud solicitud) {
-        // Caso 1: viene con prestador asignado → flujo directo
         Long prestadorAsignadoId = obtenerPrestadorAsignadoId(solicitud);
         if (prestadorAsignadoId != null) {
             return procesarConPrestadorAsignado(solicitud, prestadorAsignadoId);
         }
 
-        // Caso 2: flujo normal Top-3
         Long rubroId = Objects.requireNonNull(
-                solicitud.getCategoriaId(),
-                "categoriaId (rubro) requerido en solicitud " + solicitud.getId()
+            solicitud.getRubroId(),
+            "categoriaId (rubro) requerido en solicitud " + solicitud.getId()
         );
 
-        List<Prestador> candidatos = prestadorRepository.findByRubroIdNative(rubroId);
-        
+        List<Prestador> candidatos = prestadorRepository.findTopByRubroRanked(
+            rubroId, PageRequest.of(0, 10) // pedí más de 3 para que haya margen al filtrar
+        );
+
         List<Prestador> top3 = candidatos.stream()
-                .sorted(Comparator.comparingDouble(SolicitudService::promedioCalificaciones).reversed())
-                .limit(3)
-                .collect(Collectors.toList());
+            .filter(p -> estaLibre(p, solicitud))
+            .limit(3)
+            .toList();
 
         if (top3.isEmpty()) {
-            log.warn("Sin candidatos para rubro {} (solicitud {}) — se mantiene en CREADA",
-                    rubroId, solicitud.getId());
-
+            log.warn("Sin candidatos ACTIVO para rubro {} (solicitud {}) — se mantiene en CREADA", rubroId, solicitud.getId());
             SolicitudTop3Resultado out = new SolicitudTop3Resultado();
             out.setSolicitudId(solicitud.getId());
             out.setDescripcion(solicitud.getDescripcion());
-            out.setEstado(solicitud.getEstado().name()); // seguirá CREADA
+            out.setEstado(solicitud.getEstado().name());
             out.setTop3(List.of());
             return out;
         }
@@ -101,18 +141,17 @@ public class SolicitudService {
         solicitud.setEstado(EstadoSolicitud.COTIZANDO);
         solicitudRepository.save(solicitud);
 
-        List<InvitacionCotizacionDTO> invitaciones = top3.stream()
-                .map(p -> buildInvitacionDTO(solicitud, rubroId, p, "Invitación a cotizar"))
-                .peek(dto -> dto.setEnviado(cotizacionClient.enviarInvitacion(dto)))
-                .peek(dto -> {
-            // Si ya tenés cotizacionId real, usalo. Si no, podés usar solicitudId temporalmente.
-            Long cotizacionId = dto.getCotizacionId() != null ? dto.getCotizacionId() : dto.getSolicitudId();
-            notificacionesService.notificarInvitacionCotizacion(
-                cotizacionId,
-                "Invitación de cotización enviada",
-                "Se envió invitación al prestador " + dto.getPrestadorId() + " para la solicitud " + dto.getSolicitudId()
-            );
-        })
+        var invitaciones = top3.stream()
+            .map(p -> buildInvitacionDTO(solicitud, rubroId, p, "Invitación a cotizar"))
+            .peek(dto -> dto.setEnviado(cotizacionClient.enviarInvitacion(dto)))
+            .peek(dto -> {
+                Long cotizacionId = dto.getCotizacionId() != null ? dto.getCotizacionId() : dto.getSolicitudId();
+                notificacionesService.notificarInvitacionCotizacion(
+                    cotizacionId,
+                    "Invitación de cotización enviada",
+                    "Se envió invitación al prestador " + dto.getPrestadorId() + " para la solicitud " + dto.getSolicitudId()
+                );
+            })
             .collect(Collectors.toList());
 
         SolicitudTop3Resultado out = new SolicitudTop3Resultado();
@@ -138,32 +177,25 @@ public class SolicitudService {
         }
 
         InvitacionCotizacionDTO aviso = buildInvitacionDTO(
-                solicitud,
-                Objects.requireNonNull(solicitud.getCategoriaId()),
-                p,
-                "Asignación directa de la solicitud por favor cotizar"
+            solicitud,
+            Objects.requireNonNull(solicitud.getRubroId()),
+            p,
+            "Asignación directa de la solicitud por favor cotizar"
         );
 
-        // 1) Enviar invitación (simulado)
         aviso.setEnviado(cotizacionClient.enviarInvitacion(aviso));
 
-        // 2) Crear notificación interna para otros módulos
-        //    Usamos cotizacionId si viene; si no, usamos solicitudId como referencia.
-        Long refCotizacion = (aviso.getCotizacionId() != null)
-                ? aviso.getCotizacionId()
-                : aviso.getSolicitudId();
-
-            notificacionesService.crearNotificacion(
-                com.example.demo.entity.Notificaciones.builder()
-                        .cotizacionId(refCotizacion) // si tu columna es NOT NULL y no tenés cotización creada, usar solicitudId como referencia
-                        .titulo("Asignación directa: invitación enviada")
-                        .mensaje("Se notificó al prestador " + aviso.getPrestadorId()
-                                + " por la solicitud " + aviso.getSolicitudId())
-                        .leida(false)
-                        .build()
+        Long refCotizacion = (aviso.getCotizacionId() != null) ? aviso.getCotizacionId() : aviso.getSolicitudId();
+        notificacionesService.crearNotificacion(
+            com.example.demo.entity.Notificaciones.builder()
+                .cotizacionId(refCotizacion)
+                .titulo("Asignación directa: invitación enviada")
+                .mensaje("Se notificó al prestador " + aviso.getPrestadorId()
+                        + " por la solicitud " + aviso.getSolicitudId())
+                .leida(false)
+                .build()
         );
 
-        // 3) Actualizar estado y persistir
         solicitud.setEstado(EstadoSolicitud.COTIZANDO);
         solicitudRepository.save(solicitud);
 
@@ -174,31 +206,18 @@ public class SolicitudService {
 
     private static InvitacionCotizacionDTO buildInvitacionDTO(Solicitud s, Long rubroId, Prestador p, String mensajeBase) {
         return InvitacionCotizacionDTO.builder()
-                .solicitudId(s.getId())
-                .rubroId(rubroId)
-                .prestadorId(p.getId())
-                .prestadorNombre(p.getNombre() + " " + p.getApellido())
-                .mensaje(mensajeBase + " " + s.getId())
-                .timestamp(LocalDateTime.now())
-                .enviado(false)
-                .build();
-    }
-
-    private static double promedioCalificaciones(Prestador p) {
-        List<Calificacion> cals = p.getCalificaciones();
-        if (cals == null || cals.isEmpty()) return 0.0;
-        return cals.stream()
-                .filter(c -> c.getPuntuacion() != null)
-                .mapToInt(Calificacion::getPuntuacion)
-                .average().orElse(0.0);
+            .solicitudId(s.getId())
+            .rubroId(rubroId)
+            .prestadorId(p.getId())
+            .prestadorNombre(p.getNombre() + " " + p.getApellido())
+            .mensaje(mensajeBase + " " + s.getId())
+            .timestamp(LocalDateTime.now())
+            .enviado(false)
+            .build();
     }
 
     private Long obtenerPrestadorAsignadoId(Solicitud s) {
-        try {
-            if (s.getPrestadorAsignadoId() != null) {
-                return s.getPrestadorAsignadoId();
-            }
-        } catch (Exception ignored) {}
+        try { if (s.getPrestadorAsignadoId() != null) return s.getPrestadorAsignadoId(); } catch (Exception ignored) {}
         try {
             var m = Solicitud.class.getMethod("getPrestadorAsignadoId");
             Object v = m.invoke(s);
@@ -224,4 +243,72 @@ public class SolicitudService {
         s.setEstado(EstadoSolicitud.CANCELADA);
         solicitudRepository.save(s);
     }
+
+    private boolean estaLibre(Prestador prestador, Solicitud solicitud) {
+        if (solicitud.getPreferenciaDia() == null ||
+            solicitud.getPreferenciaDesde() == null ||
+            solicitud.getPreferenciaHasta() == null) {
+            return true; // si no hay preferencia, no filtramos
+        }
+    
+        List<Solicitud> asignadas = solicitudRepository.findAsignadasEnDiaYFranja(
+            prestador.getId(),
+            solicitud.getPreferenciaDia(),
+            solicitud.getPreferenciaDesde(),
+            solicitud.getPreferenciaHasta()
+        );
+    
+        return asignadas.isEmpty(); // libre si no hay choque
+    }
+
+    /**
+     * Procesa un lote de solicitudes y las persiste.
+     * Si alguna ya existe (mismo ID), la ignora (idempotencia).
+     */
+    @Transactional
+    public List<Solicitud> crearDesdeEventos(List<SolicitudesCreadasDTO> eventos) {
+        return eventos.stream()
+            .map(this::mapearYGuardar)
+            .collect(Collectors.toList());
+    }
+
+    private Solicitud mapearYGuardar(SolicitudesCreadasDTO e) {
+        if (solicitudRepository.existsById(e.getSolicitudId())) {
+            return solicitudRepository.findById(e.getSolicitudId()).orElse(null);
+        }
+
+        Solicitud.SolicitudBuilder b = Solicitud.builder()
+            .id(e.getSolicitudId())
+            .usuarioId(e.getUsuarioId())
+            .rubroId(rubroService.findByNombre(e.getRubro()).getId())
+            .descripcion(e.getDescripcion())
+            .estado(EstadoSolicitud.CREADA)
+            .prestadorAsignadoId(e.getPrestadorId());
+
+        // Preferencia horaria
+        var ph = e.getPreferenciaHoraria();
+        if (ph != null) {
+            if (ph.getDia() != null && !ph.getDia().isBlank()) {
+                b.preferenciaDia(LocalDate.parse(ph.getDia()));
+            }
+            if (ph.getVentana() != null && !ph.getVentana().isBlank()) {
+                b.preferenciaVentanaStr(ph.getVentana());
+                var v = parseVentana(ph.getVentana());
+                b.preferenciaDesde(v.desde);
+                b.preferenciaHasta(v.hasta);
+            }
+        }
+
+        return solicitudRepository.save(b.build());
+    }
+
+    private Ventana parseVentana(String ventana) {
+        String[] p = ventana.split("-");
+        if (p.length != 2) throw new IllegalArgumentException("Ventana inválida: " + ventana);
+        LocalTime desde = LocalTime.parse(p[0].trim());
+        LocalTime hasta = LocalTime.parse(p[1].trim());
+        return new Ventana(desde, hasta);
+    }
+
+    private record Ventana(LocalTime desde, LocalTime hasta) {}
 }
